# mcp-cad

./: .gitignore  LICENSE  McpCad-Install.bat  README.md  opencode.json  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
configs/: pi-mcp-config-alt.json  pi-mcp-config.json  vscode-mcp-config.json
docs/: RELEASE.md  com-bridge-investigation.md  tools-reference.md
mcp_cad/: __init__.py  __main__.py  errors.py  server.py
mcp_cad/core/: __init__.py  models.py  protocol.py
mcp_cad/inventor/: __init__.py  document.py  export.py  feature.py  parameter.py  property.py  sketch.py
mcp_cad/providers/: __init__.py
mcp_cad/skills/: __init__.py  arc.py  base.py  circle.py  constrain.py  dimension.py  drilling.py  ellipse.py  line.py  modify.py  pattern.py  point.py  rect.py  revolve.py  sketch.py  spline.py
mcp_cad/tools/: __init__.py  connection.py  documents.py  export.py  features.py  parameters.py  properties.py  sketches.py
proxy/: bridge.py  build.ps1
proxy/InventorBridge/: Program.cs
scripts/: __init__.py  create-issues.ps1  install.ps1  publish-portable.ps1
scripts/tui/: __init__.py  __main__.py  app.py  config_schemas.py  (+4 more)
showcase/: god-macro-test.ipt  macro-hueco-thread.ipt
src/: mcp-cad.sln
templates/: ConnectingRod.json  multi-test-manual.json  multi-test-run-verify.json  multi-test-v2.json
tests/: .gitignore  __init__.py  conftest.py  test_adapter.py  test_client.py  test_document.py  test_export.py  test_feature.py  test_parameter.py  test_property.py  test_server.py  test_sketch.py  test_skills.py  test_tools.py
(+158 files in other folders)
